v3.4.12
- Fixed a bug that caused student data not removed completely when deleting a student from a school
- Fixed a bug that caused school name and status not displaying the correct value in Directories
- Fixed a bug that caused Add buttons in Salaries to behave like Save button (only happens in Chrome browser)

v3.4.11
- Fixed a bug that caused removing last student from class not to be deleted
- Fixed a bug that caused custom fields not appearing in Institutions
- Fixed a bug that caused Roles with All Classes and All Subjects permissions not able to see students in Results module
- Fixed a bug that caused Roles with Promote/Graduate permissions not able to see Promote/Graduate buttons
- Added Dropout and Transfer Reasons will be displayed when accessing Institutions -> Students -> Academic -> Programmes
- Added names, contacts, identities, positions to Advanced Search
- The system will auto generate position numbers based on the school code + a set of random numbers

v3.4.10
- Fixed a bug that caused 404 error page when Promoting students but no students are selected
- Added Search in Student Admission Page (Institutions -> Students -> <Select Pending Admission>)
- Deleting an institution will now remove all students records properly
- When adding student to school, the student age is calculated by year only (previously it is determined by month and year)
- Fixed other UI related issues
- Added Student Out of School Report
- Fixed a bug that caused records not appearing after added by users with specific roles
- Improved UI of System Setup -> Assessments
- Transfer and Dropout button now appears in Student -> Overview (Only for Enrolled students)

v3.4.9
- Fixed bugs related to date showing in arabic language
- Fixed a bug that prompt user to repair excel worksheet after downloading
- Fixed a bug that caused student report progress bar to always stay at 0%
- Fixed a bug that caused 404 error page when importing students to school
- Added Staff absence report