@@ -2,6 +2,12 @@ v3.4.12
 - Fixed a bug that caused student data not removed completely when deleting a student from a school
 - Fixed a bug that caused school name and status not displaying the correct value in Directories
 - Fixed a bug that caused Add buttons in Salaries to behave like Save button (only happens in Chrome browser)
+- Fixed a permission issue that caused user not able to access Directories -> Classes/Subjects
+- Fixed a bug that caused 404 error page when trying to access Field Options -> Position Titles
+- Position Types (Teaching/Non-Teaching) is now linked to Position Titles instead of Institution Positions
+- Improved on the validation error messages when importing data via excel spreadsheet
+- Added Google Authentication support
+- Fixed a number of css issues
 
 v3.4.11
 - Fixed a bug that caused removing last student from class not to be deleted
